Use jfoenix / material style, remove controlsfx dependency.